fix: theme, gaps, songs and multi-touch

--- a/source/assets/styles/buttons.scss
+++ b/source/assets/styles/buttons.scss
@@ -481,12 +481,19 @@ aside > label[for="toggle-midi"]{
     // padding: 2px;
     border-radius: 999px;
     overflow: hidden;
+
     &:hover{
         border-color:var(--col-plum);
         background-color:var(--col-white);
         // filter:brightness(100%) invert(100%);
     }
+
+    &:checked,
+    &:active:hover{
+         filter:brightness(100%) invert(100%);
+    }
 }
+
 
 #button-text-size-increase,
 #button-text-size-decrease{
