--- a/source/assets/styles/themes.scss
+++ b/source/assets/styles/themes.scss
@@ -43,6 +43,11 @@
     .icon {
         filter:brightness(0);
     }
+
+    .qr{
+        filter:none;
+    }
+    
     // main{
     //     background-color: var(--col-charcoal);
     // }
